--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ id="WazirX"
 /><label class="r1" for="WazirX"><span class="t1" >WazirX</span></label>
           
                  <input
-          name="What do you prefer to invest"
+          name="Which Apps Do you prefer"
           value="None"
           type="radio"
           class="input-radio"
@@ -142,7 +142,7 @@ id="WazirX"
   /><label class="r1" for="None1"><span class="t1" >None</span></label>
           
                  <input
-          name="What do you prefer to invest"
+          name="Which Apps Do you prefer"
           value="Other"
           type="radio"
           class="input-radio"
@@ -373,8 +373,7 @@ id="None"
                 /><label class="r1" for="l"><span class="t1" >No</span></label>
           </div>
           <div class="input">
-            <p>Do you think there should be Tax or Law for Trading Crypto Currency In India? – Yes/ No
-              *</p>
+            <p>Do you think there should be Tax or Law for Trading Crypto Currency In India? *</p>
                                 <input
                             name="Tax or Law for Trading Crypto Currency"
                             value="Yes"
