--- a/submit/index.html
+++ b/submit/index.html
@@ -54,7 +54,7 @@
 		<div class="error__content">
 		  <div class="error__message message">
 			<h1 class="message__title">Your response has been submited</h1>
-			<p class="message__text">Thanks! for Spending your time and </p>
+			<p class="message__text">Thanks! for Spending your time  </p>
 		  </div>
 		  <div class="error__nav e-nav">
 			<a href="../index.html" target="_blanck" class="e-nav__link"></a>
