--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ id="None"
 
              window.location.reload()
              window.location.href='./submit/index.html'
-              
+              console.log(e)
           },
           error:function (err){
               alert("Something Error")
